# BoMatrix

./: CMakeLists.txt  Matrix.hpp  README.md  main.cpp
lib/LibBoMatrix/: CMakeLists.txt
lib/LibBoMatrix/include/: Matrix.hpp
lib/googletest/: .travis.yml  appveyor.yml
lib/googletest/ci/: build-linux-bazel.sh  travis.sh
lib/googletest/googlemock/: CMakeLists.txt
lib/googletest/googlemock/docs/: cook_book.md
lib/googletest/googlemock/src/: gmock-spec-builders.cc
lib/googletest/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_nc_test.py  gmock-generated-matchers_test.cc  gmock-matchers_test.cc  gmock-port_test.cc  gmock-spec-builders_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test.py  gmock_stress_test.cc  gmock_test_utils.py
lib/googletest/googletest/: CMakeLists.txt
lib/googletest/googletest/cmake/: internal_utils.cmake
lib/googletest/googletest/docs/: advanced.md  faq.md  primer.md
lib/googletest/googletest/samples/: sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
lib/googletest/googletest/scripts/: common.py  gen_gtest_pred_impl.py  upload.py
lib/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-typed-test.cc  gtest.cc
lib/googletest/googletest/test/: googletest-break-on-failure-unittest.py  (+58 more)
src/: CMakeLists.txt
tst/: BoMatrix_test.cpp  CMakeLists.txt  main.cpp
(+16 files in other folders)
